# KEA-AI-Mandatory_1

./: LICENSE  README.md  all_combined.csv  all_combined_clean.csv  death_stats.py  fertilizers-&-pesticides-&-deaths-in-raw-tables.xlsx  fertilizers_with_pesticides.csv  fertilizers_with_pesticides_with_total_food_supply_quantity.csv  food_supply_quality_2010-.xls  food_supply_quantity_2010-.xls  main.py  merged_table  pearson.py  pyproject.toml  statics.py  statistical_data.csv  statistical_top_10_data.csv  statistics_for_top_10.py  tes.py  top_fertilizers.py  varience.py
