[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Alex <a.sandrovschii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
openpyxl = "^3.0.10"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
